@@ -1,0 +1,3 @@
+// PR c/69389
+
+#include "../libgomp.c/pr69389.c"
