@@ -1,3 +1,9 @@
+2017-08-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/69389
+	* testsuite/libgomp.c/pr69389.c: New test.
+	* testsuite/libgomp.c++/pr69389.C: New test.
+
 2017-08-07  Tom de Vries  <tom@codesourcery.com>
 
 	PR middle-end/78266
